# algos

./: CMakeLists.txt  LICENSE
CLRS/sorting/: quick_sort.cpp
